#
# some news ... see also TODO for hints
#


2021-07-13 -> ## amtrack stuff
	      "optical" changes

	      ## device stuff
	      activate bmp180 via iio/sysfs

2021-07-12 -> ## sensor_pi && libhelper stuff
	      add get_cpu_temp() function

2021-07-10 -> ## repo stuff
              documentation updates
	      correct log parts from runit service descriptions

	      ## sensor_pi && libhelper stuff
	      add first parts to add the cpu temp amd BMP180 data

              ## database stuff
	      add additional values to database

	      ## target stuff
	      activate new runit service scripts
	      regular image updates

	      ## amtrack stuff
	      add first parts to add the cpu temp amd BMP180 data

2021-07-03 -> ## repo stuff
              documentation updates

2021-06-28 -> ## code stuff
              remove warnings

2021-06-27 -> ## poweroff_handler stuff
              some smaller add for debugging

              ## libhelper stuff
              add function to set edge falling for a gpio pin

              ## target stuff
	      activate poweroff_d via runit

2021-06-26 -> ## poweroff_handler stuff
              some smaller add for debugging

2021-06-23 -> ## poweroff_handler stuff
              some smaller fixes

2021-06-22 -> ## poweroff_handler and libhelper stuff
              add more gpio code parts
	      add first inotify code parts

2021-06-21 -> ## readout_db stuff
              add rest code to readout the database

2021-06-18 -> ## code stuff
              remove wrong NEWLINE to all perror calls in all files

	      ## libhelper stuff
	      add functions to handle GPIO via sysfs

	      ## poweroff_handler stuff
	      add first content to handle the poweroff button

              ## repo stuff
              update raspi4 kernel to 5.10.44

2021-06-17 -> ## repo stuff
              add motd files for different combinations

2021-06-16 -> ## repo stuff
              add kernel howto for raspi3/4 (64Bit)